[package]
name = "dpmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-supreme = { version = "0.8.0" }
thiserror = "1.0.63"

# [dependencies.tokio]
# version = "1.40.0"
# features = [
#   "net",
#   "macros",
#   "time",
# ]
# optional = true 

[dev-dependencies]
futures = "0.3.30"
tokio = { version = "1.40.0", features = [ "full" ] }

[[example]]
name = "warfork"
